Initial attempt to support Java 8
Doesn't work yet because bukkit module depends on Paper 1.21.11 (now 1.21.5) which doesn't work with Java 8.

Would need to rewrite parts of the SDK that uses modern Bukkit APIs so that it uses reflection or something. Need to compile against Paper 1.16.5, which is the latest version that supports Java 8.