@@ -7,6 +7,7 @@ import org.jspecify.annotations.Nullable;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Locale;
@@ -14,6 +15,7 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 final class ErrorHelper {
     private static final int MESSAGE_LENGTH = Math.min(1000, Integer.getInteger("faststats.message-length", 500));
@@ -22,20 +24,20 @@ final class ErrorHelper {
 
     public static JsonObject compile(final Throwable error, @Nullable final List<String> suppress, final boolean handled,
                                      final List<Map.Entry<Pattern, String>> customPatterns) {
-        final var report = new JsonObject();
-        final var message = getAnonymizedMessage(error, customPatterns);
+        final JsonObject report = new JsonObject();
+        final String message = getAnonymizedMessage(error, customPatterns);
 
-        final var stacktrace = new JsonArray();
-        final var header = message != null
+        final JsonArray stacktrace = new JsonArray();
+        final String header = message != null
                 ? error.getClass().getName() + ": " + message
                 : error.getClass().getName();
         stacktrace.add(header);
 
-        final var elements = error.getStackTrace();
-        final var stack = collapseStackTrace(elements);
-        final var list = new ArrayList<>(stack);
+        final StackTraceElement[] elements = error.getStackTrace();
+        final List<String> stack = collapseStackTrace(elements);
+        final ArrayList<String> list = new ArrayList<>(stack);
         if (suppress != null) list.removeAll(suppress);
-        final var traces = Math.min(list.size(), STACK_TRACE_LIMIT);
+        final int traces = Math.min(list.size(), STACK_TRACE_LIMIT);
 
         populateTraces(traces, list, elements, stacktrace);
         appendCauseChain(error.getCause(), stack, suppress, stacktrace, customPatterns);
@@ -52,21 +54,21 @@ final class ErrorHelper {
     private static void appendCauseChain(@Nullable Throwable cause, final List<String> parentStack,
                                          @Nullable final List<String> suppress, final JsonArray stacktrace,
                                          final List<Map.Entry<Pattern, String>> customPatterns) {
-        final var toSuppress = new ArrayList<>(parentStack);
+        final ArrayList<String> toSuppress = new ArrayList<>(parentStack);
         if (suppress != null) toSuppress.addAll(suppress);
-        final var visited = Collections.<Throwable>newSetFromMap(new IdentityHashMap<>());
+        final Set<Throwable> visited = Collections.<Throwable>newSetFromMap(new IdentityHashMap<>());
         while (cause != null && visited.add(cause)) {
-            final var causeMessage = getAnonymizedMessage(cause, customPatterns);
-            final var header = causeMessage != null
+            final String causeMessage = getAnonymizedMessage(cause, customPatterns);
+            final String header = causeMessage != null
                     ? "Caused by: " + cause.getClass().getName() + ": " + causeMessage
                     : "Caused by: " + cause.getClass().getName();
             stacktrace.add(header);
 
-            final var causeElements = cause.getStackTrace();
-            final var causeStack = collapseStackTrace(causeElements);
-            final var causeList = new ArrayList<>(causeStack);
+            final StackTraceElement[] causeElements = cause.getStackTrace();
+            final List<String> causeStack = collapseStackTrace(causeElements);
+            final ArrayList<String> causeList = new ArrayList<>(causeStack);
             causeList.removeAll(toSuppress);
-            final var causeTraces = Math.min(causeList.size(), STACK_TRACE_LIMIT);
+            final int causeTraces = Math.min(causeList.size(), STACK_TRACE_LIMIT);
             populateTraces(causeTraces, causeList, causeElements, stacktrace);
 
             cause = cause.getCause();
@@ -75,37 +77,37 @@ final class ErrorHelper {
 
     private static void populateTraces(final int traces, final List<String> list, final StackTraceElement[] elements,
                                        final JsonArray stacktrace) {
-        for (var i = 0; i < traces; i++) {
-            final var string = list.get(i);
+        for (int i = 0; i < traces; i++) {
+            final String string = list.get(i);
             if (string.length() <= STACK_TRACE_LENGTH) stacktrace.add("  at " + string);
             else stacktrace.add("  at " + string.substring(0, STACK_TRACE_LENGTH) + "...");
         }
         if (traces > 0 && traces < list.size()) {
             stacktrace.add("  ... " + (list.size() - traces) + " more");
         } else {
-            final var i = elements.length - list.size();
+            final int i = elements.length - list.size();
             if (i > 0) stacktrace.add("  ... " + i + " more");
         }
     }
 
     private static List<String> collapseStackTrace(final StackTraceElement[] trace) {
-        final var lines = Arrays.stream(trace)
+        final List<String> lines = Arrays.stream(trace)
                 .map(StackTraceElement::toString)
-                .toList();
+                .collect(Collectors.toList());
 
         return collapseRepeatingPattern(lines);
     }
 
     private static List<String> collapseRepeatingPattern(final List<String> lines) {
-        final var deduplicated = collapseConsecutiveDuplicates(lines);
+        final List<String> deduplicated = collapseConsecutiveDuplicates(lines);
 
-        final var n = deduplicated.size();
+        final int n = deduplicated.size();
 
-        for (var cycleLen = 1; cycleLen <= n / 2; cycleLen++) {
-            var isPattern = true;
-            var repetitions = 0;
+        for (int cycleLen = 1; cycleLen <= n / 2; cycleLen++) {
+            boolean isPattern = true;
+            int repetitions = 0;
 
-            for (var i = 0; i < n; i++) {
+            for (int i = 0; i < n; i++) {
                 if (!deduplicated.get(i).equals(deduplicated.get(i % cycleLen))) {
                     isPattern = false;
                     break;
@@ -124,10 +126,10 @@ final class ErrorHelper {
     private static List<String> collapseConsecutiveDuplicates(final List<String> lines) {
         if (lines.isEmpty()) return lines;
 
-        final var result = new ArrayList<String>();
+        final ArrayList<String> result = new ArrayList<String>();
         String previous = null;
 
-        for (final var line : lines) {
+        for (final String line : lines) {
             if (line.equals(previous)) continue;
             result.add(line);
             previous = line;
@@ -143,17 +145,17 @@ final class ErrorHelper {
     private static boolean isSameLoader(final ClassLoader loader, @Nullable final Throwable error, final Set<Throwable> visited) {
         if (error == null || !visited.add(error)) return false;
 
-        final var stackTrace = error.getStackTrace();
+        final StackTraceElement[] stackTrace = error.getStackTrace();
         if (stackTrace == null || stackTrace.length == 0)
             return isSameLoader(loader, error.getCause(), visited);
 
-        final var firstNonLibraryIndex = findFirstNonLibraryFrameIndex(stackTrace);
+        final int firstNonLibraryIndex = findFirstNonLibraryFrameIndex(stackTrace);
         if (firstNonLibraryIndex == -1) return isSameLoader(loader, error.getCause(), visited);
 
-        final var framesToCheck = Math.min(5, stackTrace.length - firstNonLibraryIndex);
+        final int framesToCheck = Math.min(5, stackTrace.length - firstNonLibraryIndex);
 
-        for (var i = 0; i < framesToCheck; i++) {
-            final var frame = stackTrace[firstNonLibraryIndex + i];
+        for (int i = 0; i < framesToCheck; i++) {
+            final StackTraceElement frame = stackTrace[firstNonLibraryIndex + i];
             if (isLibraryClass(frame.getClassName())) continue;
             if (!isFromLoader(frame, loader)) return isSameLoader(loader, error.getCause(), visited);
         }
@@ -162,7 +164,7 @@ final class ErrorHelper {
     }
 
     private static int findFirstNonLibraryFrameIndex(final StackTraceElement[] stackTrace) {
-        for (var i = 0; i < stackTrace.length; i++) {
+        for (int i = 0; i < stackTrace.length; i++) {
             if (!isLibraryClass(stackTrace[i].getClassName())) return i;
         }
         return -1;
@@ -178,7 +180,7 @@ final class ErrorHelper {
 
     private static boolean isFromLoader(final StackTraceElement frame, final ClassLoader loader) {
         try {
-            final var clazz = Class.forName(frame.getClassName(), false, loader);
+            final Class<?> clazz = Class.forName(frame.getClassName(), false, loader);
             return isSameClassLoader(clazz.getClassLoader(), loader);
         } catch (final Throwable t) {
             return false;
@@ -187,7 +189,7 @@ final class ErrorHelper {
 
     private static boolean isSameClassLoader(final ClassLoader classLoader, final ClassLoader loader) {
         if (classLoader == loader) return true;
-        var current = classLoader;
+        ClassLoader current = classLoader;
         while (current != null && current != loader) {
             current = current.getParent();
         }
@@ -195,12 +197,12 @@ final class ErrorHelper {
     }
 
     private static @Nullable String getAnonymizedMessage(final Throwable error, final List<Map.Entry<Pattern, String>> customPatterns) {
-        final var message = error.getMessage();
+        final String message = error.getMessage();
         if (message == null) return null;
-        var truncated = message.length() > MESSAGE_LENGTH
+        String truncated = message.length() > MESSAGE_LENGTH
                 ? message.substring(0, MESSAGE_LENGTH) + "..."
                 : message;
-        for (final var entry : customPatterns) {
+        for (final Map.Entry<Pattern, String> entry : customPatterns) {
             truncated = entry.getKey().matcher(truncated).replaceAll(entry.getValue());
         }
         return truncated;
@@ -238,7 +240,7 @@ final class ErrorHelper {
                 "|((?i)[A-Z]:\\\\Users\\\\)[^\\\\\\s]+"); // Windows: A-Z:\\Users\\username
     }
 
-    private static final Set<String> allowedNames = Set.of("minecraft", "server", "root", "ubuntu");
+    private static final Set<String> allowedNames = new HashSet<>(Arrays.asList("minecraft", "server", "root", "ubuntu"));
 
     public static Optional<Pattern> usernamePattern() {
         return Optional.ofNullable(System.getProperty("user.name"))
